--- a/portfolio/src/main/resources/templates/portfolio/intro.html
+++ b/portfolio/src/main/resources/templates/portfolio/intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko"  xmlns="http://www.w3.org/1999/xhtml"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="/layout.html">
+      layout:decorator="layout.html">
   <head>  
     <title>타이틀1</title>   
   </head>
