--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>타이틀</title>
+    <title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Portfolio</title>
     <link rel="shortcut icon" href="/image/favicon.png"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
@@ -53,8 +53,8 @@
   	<div class="side-nav hide">
   		<i class="fa fa-code" aria-hidden="true"></i>
   		<ul class="nav nav-pills nav-stacked">
-		  <li><a href="#">메뉴1</a></li>
-		  <li><a href="#">메뉴1</a></li>
+		  <li><a href="#">Profile</a></li>
+		  <li><a href="#">Portfolio</a></li>
 		  <li><a href="#">메뉴1</a></li>
 		  <li><a href="#">메뉴1</a></li>
 		</ul>
@@ -194,5 +194,6 @@
     		});
     	});
     </script>
+    <script layout:fragment="script"></script>
   </body>
 </html>
