--- a/portfolio/src/main/resources/templates/portfolio/profile.html
+++ b/portfolio/src/main/resources/templates/portfolio/profile.html
@@ -16,7 +16,7 @@
   <h1>Profile<small> - Web Developer</small></h1>
 </div>
 
-<div class="basic-info row">
+<div class="profile-info row">
 	<div class="col-md-3">
 		<img class="img-responsive img-thumbnail center-block" src="/image/cheon.jpg"/>
 	</div>
