--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -10,6 +10,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.9/jquery.fullPage.min.css" />
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -145,11 +146,14 @@
 	    </div>
   	</div>  	
 
+    
+    
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="/js/jquery-circle-progress-1.2.0/dist/circle-progress.min.js"></script>
     <script>
+    //<![CDATA[
 	    $('#progressBar').circleProgress({
 		  value: 1,
 		  size: 100,
@@ -191,8 +195,13 @@
     				});    				
     				$('.wrap').animate({left:0},duration);    				
     			}    			
+    		});    		
+    		
+    		$(window).scroll(function(){
+    			console.log(111);
     		});
     	});
+    //]]>
     </script>
     <script layout:fragment="script"></script>
   </body>
