--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -56,16 +56,17 @@
   	<div class="side-nav hide">
   		<i class="fa fa-code" aria-hidden="true"></i>
   		<ul class="nav nav-pills nav-stacked">
-		  <li><a href="/portfolio/profile">Profile</a></li>
-		  <li><a href="/portfolio/list">Portfolio</a></li>
-		  <li><a href="/portfolio/test">Test</a></li>
+		  <li><a href="/apps/portfolio/profile">Profile</a></li>
+		  <li><a href="/apps/portfolio/list">Portfolio</a></li>
+		  <li><a href="/apps/portfolio/test">Test</a></li>
 		</ul>
   	</div>
   	<div class="wrap">
   		<div class="navbar-fixed-top header">  			
 	    	<h2 class="text-center">
 		    	<button id="sideNavBtn" class="fa fa-bars pull-left bars"></button>
-		    	<i class="fa fa-code" aria-hidden="true"></i>&nbsp;타이틀
+		    	Web Developer's Portfolio
+		    	<!-- <i class="fa fa-code" aria-hidden="true"></i>&nbsp;타이틀 -->
 	    	</h2>
 	    </div>	    
 	    <div class="section">
