--- a/portfolio/src/main/resources/templates/portfolio/profile.html
+++ b/portfolio/src/main/resources/templates/portfolio/profile.html
@@ -18,7 +18,7 @@
 
 <div class="profile-info row">
 	<div class="col-md-3">
-		<img class="img-responsive img-thumbnail center-block" src="/image/portfolio/cheon.png"/>
+		<img class="img-responsive img-thumbnail center-block" src="/image/portfolio/cheon.jpg"/>
 	</div>
 	<div class="col-md-9">
 		<div class="panel panel-info trans">
