--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -39,7 +39,7 @@
     	.side-nav>ul>li>a:visited{color:#848484;font-size:1.3em}
     	.side-nav>ul>li>a:hover{color:#FFF;background-color:rgba(4,180,134,0.7);font-weight:bold}
     	.side-nav>ul>li>a:active{color:#FFF;background-color:rgba(4,180,134,0.7);font-weight:bold}
-    	.section{width:100%;height:100%;color:#FFF;overflow:scroll}
+    	.section{width:100%;height:100%;color:#FFF;overflow-y:scroll}
     	.contents{margin-top:60px;}
     	.article{max-width:350px;background-color:rgba(88,88,88,0.4);padding:20px;margin-bottom:20px}
     	.article>h3{padding-bottom:10px;border-bottom:1px solid #FFF}
@@ -65,7 +65,7 @@
   		<div class="navbar-fixed-top header">  			
 	    	<h2 class="text-center">
 		    	<button id="sideNavBtn" class="fa fa-bars pull-left bars"></button>
-		    	Web Developer's Portfolio
+		    	Web Developer
 		    	<!-- <i class="fa fa-code" aria-hidden="true"></i>&nbsp;타이틀 -->
 	    	</h2>
 	    </div>	    
