--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Portfolio</title>
+    <title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Friday</title>
     <link rel="shortcut icon" href="/image/portfolio/favicon.png"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
@@ -60,14 +60,14 @@
   		<ul class="nav nav-pills nav-stacked">
 		  <li><a href="/apps/portfolio/profile">Profile</a></li>
 		  <li><a href="/apps/portfolio/list">Portfolio</a></li>
-		  <li><a href="/apps/portfolio/test">Test</a></li>
+		  <li><a href="/apps/portfolio/test">Lab</a></li>
 		</ul>
   	</div>
   	<div class="wrap">
   		<div class="navbar-fixed-top header">  			
 	    	<h2 class="text-center">
 		    	<button id="sideNavBtn" class="fa fa-bars pull-left bars"></button>
-		    	Web Developer
+		    	Friday's
 		    	<button ></button>
 		    	<!-- <i class="fa fa-code" aria-hidden="true"></i>&nbsp;타이틀 -->
 	    	</h2>
