--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -32,7 +32,7 @@
     	.header>h2>button{background-color: transparent!important;background-image:none!important;border-color:transparent}
     	.header>h2>.bars:hover{color:#82EFC2}
     	.side-nav{position:absolute;left:-30%;width:30%;height:100%;background-color:rgba(255,255,255,0.3);text-align:center}
-    	.side-nav>i{font-size:5em;padding:10px 0 10px 0}
+    	.side-nav>a>i{font-size:4em;padding:20px 0 20px 0}
     	.side-nav>ul>li{border-top:1px solid #848484; padding:10px 0 10px 0}
     	.side-nav>ul>li>a{color:#848484;font-size:1.3em}
     	.side-nav>ul>li>a:link{color:#848484;font-size:1.3em}
@@ -41,7 +41,7 @@
     	.side-nav>ul>li>a:active{color:#FFF;background-color:rgba(4,180,134,0.7);font-weight:bold}
     	.section{width:100%;height:100%;color:#FFF;overflow-y:scroll}
     	.contents{margin-top:60px;}
-    	.article{max-width:350px;background-color:rgba(88,88,88,0.4);padding:20px;margin-bottom:20px}
+    	.article{min-width:300px;;max-width:350px;background-color:rgba(88,88,88,0.4);padding:20px;margin-bottom:20px}
     	.article>h3{padding-bottom:10px;border-bottom:1px solid #FFF}
     	.article>img{margin:10px 0 10px 0}
     	.carousel-indicators>li{border-color: #000}
@@ -56,18 +56,18 @@
   		<h3>Now Loading ...</h3>
   	</div>  	
   	<div class="side-nav hide">
-  		<i class="fa fa-code" aria-hidden="true"></i>
+  		<a href="/apps/portfolio/intro"><i class="fa fa-code" aria-hidden="true"></i></a>
   		<ul class="nav nav-pills nav-stacked">
 		  <li><a href="/apps/portfolio/profile">Profile</a></li>
 		  <li><a href="/apps/portfolio/list">Portfolio</a></li>
-		  <li><a href="/apps/portfolio/test">Lab</a></li>
+		  <li><a href="/apps/portfolio/lab">Lab</a></li>
 		</ul>
   	</div>
   	<div class="wrap">
   		<div class="navbar-fixed-top header">  			
 	    	<h2 class="text-center">
 		    	<button id="sideNavBtn" class="fa fa-bars pull-left bars"></button>
-		    	Friday's
+		    	Friday
 		    	<button ></button>
 		    	<!-- <i class="fa fa-code" aria-hidden="true"></i>&nbsp;타이틀 -->
 	    	</h2>
