--- a/portfolio/src/main/resources/templates/portfolio/list.html
+++ b/portfolio/src/main/resources/templates/portfolio/list.html
@@ -121,6 +121,8 @@
 				  'alt' : 'image'+index
 			  }))).appendTo(inner);
 		  });
+		  
+		  $('.modal-body').height($(window).height());
 	  });
 	  
   });         
