--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -10,45 +10,11 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"/>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.9/jquery.fullPage.min.css" />
+	<link rel="stylesheet" href="/css/portfolio.css"/>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <style>
-    	@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-    	html,body{margin:0;padding:0;width:100%;height:100%;font-family: 'Nanum Gothic', serif;background-color: #000;overflow:hidden}
-    	a:link{color:#FFF}
-    	a:visited{color:#FFF}
-    	a:hover{color:#FFF}
-    	a:active{color:#FFF}
-    	ul{list-style: none}
-    	.progress{margin:0;position:absolute;z-index:2;width:100%;height:100%;text-align:center;padding-top:20%}
-    	.hide{display:none}    	
-    	.wrap{width:100%;height:100%;z-index:1;position:relative}
-    	.wrap:after{width:100%;height:100%;z-index:-1;position:absolute;top:0;left:0;content:"";background-image:url('/image/portfolio/back.jpg');background-repeat:repeat;background-position:center;background-origin:content-box;background-size: 100%;opacity: 0.9!important; filter:alpha(opacity=90)}
-    	.header{background-color:rgba(0,0,0,0.2)}
-    	.header>h2{margin:0;padding:10px;color:#FFF;font-weight:bold}
-    	.header>h2>button{background-color: transparent!important;background-image:none!important;border-color:transparent}
-    	.header>h2>.bars:hover{color:#82EFC2}
-    	.side-nav{position:absolute;left:-30%;width:30%;height:100%;background-color:rgba(255,255,255,0.3);text-align:center}
-    	.side-nav>a>i{font-size:4em;padding:20px 0 20px 0}
-    	.side-nav>ul>li{border-top:1px solid #848484; padding:10px 0 10px 0}
-    	.side-nav>ul>li>a{color:#848484;font-size:1.3em}
-    	.side-nav>ul>li>a:link{color:#848484;font-size:1.3em}
-    	.side-nav>ul>li>a:visited{color:#848484;font-size:1.3em}
-    	.side-nav>ul>li>a:hover{color:#FFF;background-color:rgba(4,180,134,0.7);font-weight:bold}
-    	.side-nav>ul>li>a:active{color:#FFF;background-color:rgba(4,180,134,0.7);font-weight:bold}
-    	.section{width:100%;height:100%;color:#FFF;overflow-y:scroll}
-    	.contents{margin-top:60px;}
-    	.article{min-width:300px;;max-width:350px;background-color:rgba(88,88,88,0.4);padding:20px;margin-bottom:20px}
-    	.article>h3{padding-bottom:10px;border-bottom:1px solid #FFF}
-    	.article>img{margin:10px 0 10px 0}
-    	.carousel-indicators>li{border-color: #000}
-    	.carousel-indicators>li.active{background-color: rgba(0,0,0,0.6)}
-    	.category{background-color: transparent; margin:10px;font-size:1.5em;border:1px solid #FFF;text-align:center}
-    	.top-pannel{background-color: transparent;text-align: center}
-    </style>
+    <![endif]-->    
   </head>
   <body>
   	<div class="progress">
@@ -68,7 +34,7 @@
 	    	<h2 class="text-center">
 		    	<button id="sideNavBtn" class="fa fa-bars pull-left bars"></button>
 		    	Friday
-		    	<button ></button>
+		    	<a class="btn btn-success btn-sm pull-right" href="/apps/portfolio/profile#mail" role="button">Mail</a>
 		    	<!-- <i class="fa fa-code" aria-hidden="true"></i>&nbsp;타이틀 -->
 	    	</h2>
 	    </div>	    
@@ -127,10 +93,6 @@
     				$('.wrap').animate({left:0},duration);    				
     			}    			
     		});    		
-    		
-    		$(window).scroll(function(){
-    			console.log(111);
-    		});
     	});
     //]]>
     </script>
