--- a/portfolio/src/main/resources/templates/portfolio/lab.html
+++ b/portfolio/src/main/resources/templates/portfolio/lab.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout">
   <head>  
-    <title>List</title>   
+    <title>Lab</title>   
   </head>
   <body>
 <div layout:fragment="contents"> 	
