--- a/portfolio/src/main/resources/static/css/portfolio.css
+++ b/portfolio/src/main/resources/static/css/portfolio.css
@@ -7,6 +7,7 @@ a:visited{color:#FFF}
 a:hover{color:#FFF}
 a:active{color:#FFF}
 ul{list-style: none}
+.cen{text-align: center}
 .progress{margin:0;position:absolute;z-index:2;width:100%;height:100%;text-align:center;padding-top:20%}
 .hide{display:none}    	
 .wrap{width:100%;height:100%;z-index:1;position:relative}
