--- a/portfolio/src/main/resources/templates/portfolio/chat.html
+++ b/portfolio/src/main/resources/templates/portfolio/chat.html
@@ -6,16 +6,16 @@
     <title>Chat</title>   
      <style>
 	  	.chat-box{background-color:rgba(1,223,165,0.3);padding: 1.5em;border-radius:0.5em}
-	  	.invite-box{background-color:rgba(0,0,0,0.4);padding:0.5em;border-radius:1em}
-	  	.invite-mail{background-color: transparent;border:0;box-shadow:none}
+	  	.invite-box{background-color:rgba(0,0,0,0.4);padding:0.5em;border-radius:1em;width:50%;margin-top:1em}
+	  	.invite-mail{background-color: transparent;border:0;box-shadow:none;width:80%;font-size:1.5em;font-weight:bold;}
 	  	.invite-mail:focus{box-shadow:none;border:0;color:#FFF}
 	  	.invite-btn{background-color:rgba(255,255,255,0.4);color:#FFF}
 	  	.invite-btn:hover{background-color:rgba(19,100,78,1);font-weight:bold;color:#FFF}
-	  	.invite-btn:active{}
 	  	
 	  	@media screen and (max-width: 767px) {
-		    .invite-mail{width:70%}
-		    .invite-btn{}
+	  		.chat-box{padding: 0.8em;}
+	  		.invite-box{width:100%}
+		    .invite-mail{display:inline-block;width:70%;padding:0;font-size:1em;}
 		}
 	  </style>
   </head> 
@@ -40,9 +40,13 @@
 		<form class="form-inline cen" name="invite-form">
 		    <div class="form-group invite-box">
 		    	<label for="email" class="sr-only">Password</label>
-		    	<input type="email" name="email" class="form-control input-lg invite-mail" id="email" placeholder="Email"/>
+		    	<input type="email" name="email" class="form-control invite-mail" id="email" placeholder="Email"/>
 		    	<button type="submit" class="btn invite-btn">가입</button>		    	
-		    </div>	  			
+		    </div>	
+		     <div class="form-group invite-box">
+		    	 <button type="button" class="btn btn-primary btn-lg btn-block">입장</button>	    	
+		    </div>	  	
+		   	    
 		</form>
 	</div>
 </div>
@@ -52,7 +56,74 @@
 <script layout:fragment="script">
 //<![CDATA[
   $(document).ready(function(){
-	  $("form[name=invite-form]").submit(function(){});
+	  $("form[name=invite-form]").submit(function(){		
+		  var form = $(this)[0];
+		  var formGroup = $(this).find('div');
+		  		  
+		  var check = true;
+			$.each(form,function(index,value){
+				if(!$(this).is("button") && $.trim($(this).val()) == ''){
+					$(formGroup[index]).addClass("has-error");	
+					$(this).focus();
+					makeAlert(form,"danger","팀에 가입 하실 이메일을 입력하세요.");
+					check = false;
+					return false;
+				}				
+			});	
+		  
+			if(!check) return false;
+			
+			setCover();	
+			
+		  $.post("/apps/portfolio/invite",$(this).serialize(),function(data){
+		  		var result = data.result;
+		  		
+		  		if(result == 1001){				
+					makeAlert(form,"success","<strong>초대성공</strong> 성공적으로 초대되었습니다.</br>기입하신 메일을 확인해주세요.");
+				}else{
+					makeAlert(form,"danger","<strong>초대실패</strong> 아래와 같은 이유로 초대에 실패했습니다. </br>"+data.reason);
+				}
+		  		
+		  		$(".cover").remove();
+		  });
+		  
+		  return false;
+		  
+	  });
+	  
+	  function setCover(){
+			
+			var img = $('<img>',{
+				'class' : 'cover-img',
+				'src' : '/image/portfolio/squares.gif'
+			});
+			
+			var word = $('<h2>',{
+				'html' : '<strong>Please Wait...<strong>'
+			})
+			
+			var cover = $('<div>',{
+				'class' : 'cover'				
+			}).append($('<div>',{'class':'cover-wrap'}).append(img).append(word)).appendTo('body');
+		};
+	  
+	  function makeAlert(target,className,text){
+			var alert = $('<div>',{
+				'class' : 'alert alert-'+className+' alert-dismissible',
+				'role' : 'alert',
+				'html' : text
+			}).append($('<button>',{
+				'type' : 'button',
+				'class' : 'close',
+				'data-dismiss' : 'alert',
+				'aria-label' : 'Close'
+			}).append($('<span>',{
+				'aria-hidden' : 'true',
+				'html' : '&times;'
+			}))).prependTo($(target));
+			
+			return alert;
+		};
 	 
   });         
            
