--- a/portfolio/src/main/resources/templates/layout.html
+++ b/portfolio/src/main/resources/templates/layout.html
@@ -26,6 +26,7 @@
   		<ul class="nav nav-pills nav-stacked">
 		  <li><a href="/apps/portfolio/profile">Profile</a></li>
 		  <li><a href="/apps/portfolio/list">Portfolio</a></li>
+		  <!-- <li><a href="/apps/portfolio/chat">Slack</a></li> -->
 		  <li><a href="/apps/portfolio/lab">Lab</a></li>
 		</ul>
   	</div>
