--- a/portfolio/src/main/resources/templates/portfolio/profile.html
+++ b/portfolio/src/main/resources/templates/portfolio/profile.html
@@ -19,7 +19,7 @@
 
 <div class="profile-info row">
 	<h2><strong>- 기본정보(Infomation)</strong></h2>
-	<div class="col-md-3">
+	<div class="col-md-3 profile-img" >
 		<img class="img-responsive img-thumbnail center-block" src="/image/portfolio/cheon.jpg"/>
 	</div>
 	<div class="col-md-9">
