--- a/portfolio/src/main/resources/static/css/portfolio.css
+++ b/portfolio/src/main/resources/static/css/portfolio.css
@@ -33,7 +33,8 @@ ul{list-style: none}
 .carousel-indicators>li.active{background-color: rgba(0,0,0,0.6)}
 .category{background-color: transparent; margin:10px;font-size:1.5em;border:1px solid #FFF;text-align:center}
 .top-pannel{background-color: transparent;text-align: center}
-.profile-info{margin: 6em 0 6em 0; height}
+.profile-info{margin: 6em 0 6em 0}
+.profile-img{ padding: 4em 0 2em 0}
 .black{background-color:rgba(88,88,88,0.4)}
 .trans{background-color: transparent; margin-top:2em}
 .trans-only{background-color: transparent;}
