--- a/portfolio/src/main/resources/templates/portfolio/profile.html
+++ b/portfolio/src/main/resources/templates/portfolio/profile.html
@@ -59,7 +59,7 @@
 				<tr>
 					<td>경력(Career)</td>
 					<td>
-						<p>팍스넷(Paxnet) : 2016.11.10 ~ <span th:text="'('+${CAREER}+')'"></span></p>
+						<p>2016.11.10 ~ <span th:text="'('+${CAREER}+')'"></span></p>
 					</td>
 				</tr>
 			</tbody>
